legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr71727-2.c-4.8.2-3.out.txt
pr71727-2.c:4:9: error: attribute(target("+nosve")) is unknown
 #pragma GCC target "+nosve"
         ^
pr71727-2.c:7:1: error: attribute(target("+nosve")) is unknown
 {
 ^
